<resources>
    <string name="app_name">Mappin</string>
    <string name="action_settings">Settings</string>
    <string name="button_search">Search Route</string>
    <string name="button_report">Report Traffic</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="or">- or -</string>
    <string name="facebook_app_id">1722506791301639</string>
    <string name="label_from">From: </string>
    <string name="label_to">To: </string>
    <string name="button_go">GO!</string>
    <string name="button_report_write">REPORT!</string>
    <string name="button_clear">Clear</string>
    <string name="button_submit">Submit</string>
    <string name="location_label">Location: </string>
    <string name="title_activity_map">Route result</string>
    <string name="title_activity_main">Search route</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">No address found</string>
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="direction_api_key">AIzaSyB6hmwIfgZi2IVMzLVEUCNJVyJj7nW72N8</string>
    <string name="map_copyrights">Map data ©2016 Google</string>
    <string name="title_activity_report">Report incident</string>
    <string name="mappin_live_traffic_fb_group_id">1515449928758169</string>
    <string name="start_location_marker">Start point</string>
    <string name="end_location_marker">End point</string>
    <string name="title_activity_report_write">Report incident</string>
    <string name="button_retrieve">Retrieve Events</string>
    <string name="text_description">Enter description here.</string>
    <string name="debug_tag">MyApplication</string>
    <string name="button_log">start logging</string>
    <string name="button_stopUpdate">stop</string>
    <string name="button_help">help</string>
    <string name="help_dialog_title">Help</string>
    <string name="ok">OK</string>
    <string name="home_help_msg">---Welcome to Mappin---\nThis is an Android app combining the information from Google and Facebook to provide you with the best route to travel between places.\n*Search Route*\nStart searching routes, please RETRIEVE EVENTS before searching to optimise the route results.\n*Report Traffic*\nReport any road incidents.\n*Retrieve Events*\nRetrieve live traffic incidents from Facebook traffic groups.\n*Facebook Login*\nPlease login to Facebook to be able to retrieve events successfully.\n</string>
    <string name="main_help_msg">*GPS*\nClick on the GPS button at the top right hand corner of the map to generate a more accurate departure address.\n*From textbox*\nFill in address either by clicking on the GPS button or typing in manually.\n*To textbox*\nFill in address either by clicking on the map or typing in manually.\n*GO!*\nStart route searching, the app will return you with a few suggested routes on a new page.\n</string>
    <string name="map_help_msg">*GPS*\nStart location update, the map will keep updating and zoom into your current location.\n*stop*\nStop location update, the map will stop location update and stop moving.\n*Route colours*\nThe route colours ranked as blue-green-orange-red, blue being the best and red being the worst.\nDark colour for BUS.\nLight colour for WALKING.\n*Route-Instructions*\nClick on a route to generate a scrollable list of information about the route with estimated travel time, walking distance, bus arrival time, bus number, etc.\n*Report Traffic*\nGo to report traffic page.\n</string>
    <string name="report_help_msg">*GPS*\nStart location update, the map will keep updating and zoom into your current location.\n*Location textbox*\nClick on the map to generate a report location or type in manually.\n*REPORT!*\nEnters report writing page to give more detail about the incident.\n</string>
    <string name="report_write_help_msg">*Address text*\nThe latitude, longitude and the address of the location you want to report incident.\n*Description textbox*\nEnter more detail about the incident you want to report.\n*Submit*\nSubmit the reported incident onto Facebook traffic group, it will be posted onto the wall after being approved by admins.\n</string>
</resources>
