<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.gary.myapplication.HomeActivity"
    tools:showIn="@layout/activity_home">

    <Button
        style="@style/Button"
        android:layout_gravity="end"
        android:text="@string/button_help"
        android:onClick="showHelp"/>

    <Button
        android:id="@+id/button_search"
        style="@style/Button.Large"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_green"
        android:onClick="searchRoute"
        android:text="@string/button_search" />

    <Button
        android:id="@+id/button_report"
        style="@style/Button.Large"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_red"
        android:onClick="reportTraffic"
        android:text="@string/button_report" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_retrieve"
            style="@style/Button"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_yellow"
            android:onClick="getFBTraffic"
            android:text="@string/button_retrieve" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/button_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button android:id="@+id/button_log"
        style="@style/Button"
        android:layout_marginTop="30dp"
        android:text="@string/button_log"
        android:onClick="startLog"/>

</LinearLayout>
