<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.gary.myapplication.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        style="@style/Button"
        android:layout_gravity="end"
        android:text="@string/button_help"
        android:onClick="showHelp"/>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:name="com.google.android.gms.maps.MapFragment"
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="300dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/map_copyrights"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp">

        <TextView android:id="@+id/from"
            style="@style/Text"
            android:text="@string/label_from"
            android:paddingBottom="10dp"/>

        <EditText android:id="@+id/text_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/from"
            android:singleLine="true"/>

        <TextView android:id="@+id/to"
            style="@style/Text"
            android:text="@string/label_to"
            android:layout_below="@id/from"
            android:layout_alignRight="@id/from"/>

        <EditText android:id="@+id/text_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/to"
            android:layout_below="@id/text_from"
            android:singleLine="true"/>

        <Button android:id="@+id/button_go"
            style="@style/Button"
            android:background="@drawable/button_yellow"
            android:layout_below="@id/text_to"
            android:layout_alignRight="@id/text_to"
            android:text="@string/button_go"
            android:layout_marginTop="5dp"
            android:onClick="getRoute"/>
    </RelativeLayout>

</LinearLayout>
