<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.gary.myapplication.ReportActivity"
    tools:showIn="@layout/activity_report">

    <Button
        style="@style/Button"
        android:layout_gravity="end"
        android:text="@string/button_help"
        android:onClick="showHelp"/>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/report_map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="300dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/map_copyrights" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/Text"
            android:text="@string/location_label" />

        <EditText
            android:id="@+id/text_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />

    </LinearLayout>

    <Button
        android:id="@+id/button_report_location"
        style="@style/Button"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_red"
        android:onClick="reportWrite"
        android:text="@string/button_report_write"
        android:textColor="@color/white" />


</LinearLayout>
