<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.gary.myapplication.MapActivity"
    tools:showIn="@layout/activity_map">

    <Button
        style="@style/Button"
        android:layout_gravity="end"
        android:text="@string/button_help"
        android:onClick="showHelp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map_copyrights"
        android:textSize="10sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            android:name="com.google.android.gms.maps.MapFragment"
            android:id="@+id/guide_map"
            android:layout_width="match_parent"
            android:layout_height="250dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button android:id="@+id/button_stopUpdate"
                style="@style/Button"
                android:layout_alignParentRight="true"
                android:layout_marginTop="55dp"
                android:text="@string/button_stopUpdate"
                android:onClick="stopUpdateCamera"
                android:textAllCaps="false"/>

        </RelativeLayout>

    </FrameLayout>

    <TextView android:id="@+id/warnings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"/>

    <ListView android:id="@+id/instruction_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button android:id="@+id/button_rp"
        style="@style/Button"
        android:background="@drawable/button_red"
        android:text="@string/button_report"
        android:onClick="reportTraffic"
        android:layout_gravity="end"
        android:layout_marginTop="5dp"/>

</LinearLayout>
